# quickqash_pos

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
data/: schema.sql
include/data/: Db.h  ProductRepo.h
include/domain/: Product.h
include/printing/: EscPos.h  PrintQueue.h  ReceiptPrinter.h
include/services/: PosService.h
include/ui/: PosView.h  PrintQueueView.h  ProductDialog.h  ProductsView.h  SettingsDialog.h
include/util/: Money.h  Settings.h
packaging/: quickqash_installer.iss
src/: MainWindow.cpp  main.cpp
src/data/: Db.cpp  ProductRepo.cpp
src/domain/: Product.cpp
src/printing/: EscPos.cpp  PrintQueue.cpp  ReceiptPrinter.cpp
src/services/: PosService.cpp
src/ui/: PosView.cpp  PrintQueueView.cpp  ProductDialog.cpp  ProductsView.cpp  SettingsDialog.cpp
src/util/: Money.cpp  Settings.cpp
tests/: test_checkout.cpp  test_productrepo.cpp
ui/: MainWindow.ui  PosView.ui  PrintQueueView.ui  ProductDialog.ui  ProductsView.ui  SettingsDialog.ui
